# college-graph-lab

./: .gitignore  LICENSE  README.md  graph.py  main.py  pyproject.toml  report.md
data/: CondMat.txt
prompts/: 1_rw_graph.md  2_basic_matrics.md  3_k_core.md  4_densest_subgraph.md  5_k_clique.md  6_lds.md  7_visualization.md  8_output.md  9_report.md
