[project]
name = "graph-lab"
version = "0.1.0"
description = "A graph processing laboratory using NetworkX"
authors = [
    {name = "nictheboy", email = "nictheboy@outlook.com"},
]
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
] 